clib_packages/xforms/package/include/xforms_forms.h

/* Some general constants */

typedef enum {
    FL_ON          = 1,
    FL_OK          = 1,
    FL_VALID       = 1,
    FL_PREEMPT     = 1,
    FL_AUTO        = 2,
    FL_WHEN_NEEDED = FL_AUTO,
    FL_OFF         = 0,
    FL_CANCEL      = 0,
    FL_INVALID     = 0,

    /* WM_DELETE_WINDOW callback return */

    FL_IGNORE      = -1
}blablabla;
/* The screen coordinate unit, FL_Coord, must be of signed type */

typedef int FL_Coord;
typedef unsigned long FL_COLOR;
/* Window manager decoration request and forms attributes */

typedef enum {
    FL_FULLBORDER = 1,      /* normal                                  */
    FL_TRANSIENT,           /* set TRANSIENT_FOR property              */
    FL_NOBORDER             /* use override_redirect to supress decor. */
 }blablabla;
/* Mouse buttons */

typedef enum {
    FL_MBUTTON1 = 1,
    FL_MBUTTON2,
    FL_MBUTTON3,
    FL_MBUTTON4,
    FL_MBUTTON5
}blablabla;
/* Pop-up menu item attributes. NOTE if more than 8, need to change
 * choice and menu class where mode is kept by a single byte */

typedef enum {
    FL_PUP_NONE,
    FL_PUP_GREY  = 1,
    FL_PUP_BOX   = 2,
    FL_PUP_CHECK = 4,
    FL_PUP_RADIO = 8
}blablabla;
typedef struct FL_FORM_    FL_FORM;
typedef struct FL_OBJECT_  FL_OBJECT;
/* Callback function for an entire form */

typedef void ( * FL_FORMCALLBACKPTR )( FL_OBJECT *,
                                       void * );
/* Preemptive callback function  */

typedef int ( * FL_RAW_CALLBACK )( FL_FORM *,
                                   void * );
/* At close (WM menu delete/close etc.) function */

typedef int ( * FL_FORM_ATCLOSE )( FL_FORM *,
                                   void * );
/* Deactivate/activate callback */

typedef void ( * FL_FORM_ATDEACTIVATE )( FL_FORM *,
                                         void * );
typedef void ( * FL_FORM_ATACTIVATE )( FL_FORM *,
                                       void * );
extern FL_OBJECT *FL_EVENT;
/*** FORM ****/

/* Form visibility state: form->visible */

typedef enum {
  FL_BEING_HIDDEN = -1,
  FL_HIDDEN       = 0,
  FL_INVISIBLE    = FL_HIDDEN,
  FL_VISIBLE      = 1
}blablabla;
/* Async IO stuff */

typedef enum {
    FL_READ   = 1,
    FL_WRITE  = 2,
    FL_EXCEPT = 4
}blablabla;
/* IO other than XEvent Q */

typedef void ( * FL_IO_CALLBACK )( int,
                                   void * );
extern void fl_add_io_callback( int              fd,
                                   unsigned int     mask,
                                   FL_IO_CALLBACK   callback,
                                   void           * data );
extern void fl_remove_io_callback( int            fd,
                                      unsigned int   mask,
                                      FL_IO_CALLBACK cb );
/* signals */

typedef void ( * FL_SIGNAL_HANDLER )( int,
                                      void * );
extern void fl_add_signal_callback( int                 s,
                                       FL_SIGNAL_HANDLER   cb,
                                       void              * data );
extern void fl_remove_signal_callback( int s );
extern void fl_signal_caught( int s );
extern void fl_app_signal_direct( int y );
typedef enum {
	FL_INPUT_END_EVENT_CLASSIC = 0,
	FL_INPUT_END_EVENT_ALWAYS  = 1
}blablabla;
extern int fl_input_end_return_handling( int type );
/* Timeouts */

typedef void (* FL_TIMEOUT_CALLBACK )( int, void * );
extern int fl_add_timeout( long                  msec,
                              FL_TIMEOUT_CALLBACK   callback,
                              void                * data );
extern void fl_remove_timeout( int id );
/* Basic public routine prototypes */

extern int fl_library_version( int * ver,
                                  int * rev );
extern long fl_library_full_version( int         * version,
										int         * revision,
										int         * fix_level,
										const char ** extra );
/** Generic routines that deal with FORMS **/

extern FL_FORM * fl_bgn_form( int      type,
                                 FL_Coord w,
                                 FL_Coord h );
extern void fl_end_form( void );
extern FL_OBJECT * fl_do_forms( void );
extern FL_OBJECT * fl_check_forms( void );
extern FL_OBJECT * fl_do_only_forms( void );
extern FL_OBJECT * fl_check_only_forms( void );
extern void fl_freeze_form( FL_FORM * form );
extern void fl_set_focus_object( FL_FORM   * form,
                                    FL_OBJECT * obj );
extern FL_OBJECT *fl_get_focus_object( FL_FORM * form );
extern void fl_reset_focus_object( FL_OBJECT * ob );
#define fl_set_object_focus   fl_set_focus_object
extern FL_FORM_ATCLOSE fl_set_form_atclose( FL_FORM         * form,
                                               FL_FORM_ATCLOSE   fmclose,
                                               void            * data );
extern FL_FORM_ATCLOSE fl_set_atclose( FL_FORM_ATCLOSE   fmclose,
                                          void            * data );
extern FL_FORM_ATACTIVATE fl_set_form_atactivate( FL_FORM            * form,
													 FL_FORM_ATACTIVATE   cb,
													 void               * data );
extern FL_FORM_ATDEACTIVATE fl_set_form_atdeactivate( FL_FORM              * form,
														 FL_FORM_ATDEACTIVATE   cb,
														 void                 * data );
extern void fl_unfreeze_form( FL_FORM * form );
extern int fl_form_is_activated( FL_FORM * form );
extern void fl_deactivate_form( FL_FORM * form );
extern void fl_activate_form( FL_FORM * form );
extern void fl_deactivate_all_forms( void );
extern void fl_activate_all_forms( void );
extern void fl_freeze_all_forms( void );
extern void fl_unfreeze_all_forms( void );
extern void fl_scale_form( FL_FORM * form,
                              double    xsc,
                              double    ysc );
extern void fl_set_form_position( FL_FORM  * form,
                                     FL_Coord   x,
                                     FL_Coord   y );
extern void fl_set_form_title( FL_FORM    * form,
                                  const char * name );
extern void fl_set_form_title_f( FL_FORM *    form,
									const char * fmt,
									... );
extern void fl_set_app_mainform( FL_FORM * form );
extern FL_FORM * fl_get_app_mainform( void );
extern void fl_set_app_nomainform( int flag );
extern void fl_set_form_callback( FL_FORM            * form,
                                     FL_FORMCALLBACKPTR   callback,
                                     void               * d );
#define  fl_set_form_call_back    fl_set_form_callback
extern void fl_set_form_size( FL_FORM  * form,
                                 FL_Coord   w,
                                 FL_Coord   h );
extern void fl_set_form_background_color( FL_FORM * form,
											 FL_COLOR  color );
extern FL_COLOR fl_get_form_background_color( FL_FORM * form );
extern void fl_set_form_hotspot( FL_FORM  * form,
                                    FL_Coord   x,
                                    FL_Coord   y );
extern void fl_set_form_hotobject( FL_FORM   * form,
                                      FL_OBJECT * ob );
extern void fl_set_form_minsize( FL_FORM  * form,
                                    FL_Coord   w,
                                    FL_Coord   h );
extern void fl_set_form_maxsize( FL_FORM  * form,
                                    FL_Coord   w,
                                    FL_Coord   h );
extern void fl_set_form_event_cmask( FL_FORM       * form,
                                        unsigned long   cmask );
extern unsigned long fl_get_form_event_cmask( FL_FORM * form );
extern void fl_set_form_geometry( FL_FORM  * form,
                                     FL_Coord   x,
                                     FL_Coord   y,
                                     FL_Coord   w,
                                     FL_Coord   h );
#define fl_set_initial_placement fl_set_form_geometry
extern Window fl_show_form( FL_FORM    * form,
                               int          place,
                               int          border,
                               const char * name );
extern Window fl_show_form_f( FL_FORM    * form,
								 int          place,
								 int          border,
								 const char * fmt,
								 ... );
extern void fl_hide_form( FL_FORM * form );
extern void fl_free_form( FL_FORM * form );
extern void fl_redraw_form( FL_FORM * form );
extern void fl_set_form_dblbuffer( FL_FORM * form,
                                      int       y );
extern Window fl_prepare_form_window( FL_FORM    * form,
                                         int          place,
                                         int          border,
                                         const char * name );
extern Window fl_prepare_form_window_f( FL_FORM    * form,
										   int          place,
										   int          border,
										   const char * fmt,
										   ... );
extern Window fl_show_form_window( FL_FORM * form );
extern double fl_adjust_form_size( FL_FORM * form );
extern int fl_form_is_visible( FL_FORM * form );
extern int fl_form_is_iconified( FL_FORM * form );
extern FL_RAW_CALLBACK fl_register_raw_callback( FL_FORM         * form,
                                                    unsigned long     mask,
                                                    FL_RAW_CALLBACK   rcb );
#define fl_register_call_back fl_register_raw_callback
extern void fl_for_all_objects( FL_FORM * form,
                                   int       ( * cb )( FL_OBJECT *, void * ),
                                   void    * v );
/* Draw mode */

typedef enum {
    FL_XOR  = GXxor,
    FL_COPY = GXcopy,
    FL_AND  = GXand
}blablabla;
/* FL_xxx does not do anything anymore, but kept for compatibility */

typedef enum {
    FL_IllegalVisual = -1,
    FL_StaticGray    = StaticGray,
    FL_GrayScale     = GrayScale,
    FL_StaticColor   = StaticColor,
    FL_PseudoColor   = PseudoColor,
    FL_TrueColor     = TrueColor,
    FL_DirectColor   = DirectColor,
    FL_DefaultVisual = 10         /* special request */
}blablabla;
typedef enum {
    FL_North         = NorthGravity,
    FL_NorthEast     = NorthEastGravity,
    FL_NorthWest     = NorthWestGravity,
    FL_South         = SouthGravity,
    FL_SouthEast     = SouthEastGravity,
    FL_SouthWest     = SouthWestGravity,
    FL_East          = EastGravity,
    FL_West          = WestGravity,
    FL_NoGravity     = ForgetGravity,
    FL_ForgetGravity = ForgetGravity
}blablabla;
//#define fl_diagline( x, y, w, h, c )                                          \
//    do                                                                        \
//    {                                                                         \
//        FL_COORD fli_x = ( x ), fli_y = ( y );                                \
//        fl_line( fli_x, fli_y, fli_x + ( w ) - 1, fli_y + ( h ) - 1, ( c ) ); \
//    } while ( 0 )

/* Line attributes */

typedef enum {
    FL_SOLID          = LineSolid,
    FL_USERDASH       = LineOnOffDash,
    FL_USERDOUBLEDASH = LineDoubleDash,
    FL_DOT,
    FL_DOTDASH,
    FL_DASH,
    FL_LONGDASH
}blablabla;
/* Program default masks */

typedef enum {
    FL_PDDepth           = ( 1 <<  1 ),
    FL_PDClass           = ( 1 <<  2 ),
    FL_PDDouble          = ( 1 <<  3 ),
    FL_PDSync            = ( 1 <<  4 ),
    FL_PDPrivateMap      = ( 1 <<  5 ),
    FL_PDScrollbarType   = ( 1 <<  6 ),
    FL_PDPupFontSize     = ( 1 <<  7 ),
    FL_PDButtonFontSize  = ( 1 <<  8 ),
    FL_PDInputFontSize   = ( 1 <<  9 ),
    FL_PDSliderFontSize  = ( 1 << 10 ),
    FL_PDVisual          = ( 1 << 11 ),
    FL_PDULThickness     = ( 1 << 12 ),
    FL_PDULPropWidth     = ( 1 << 13 ),
    FL_PDBS              = ( 1 << 14 ),
    FL_PDCoordUnit       = ( 1 << 15 ),
    FL_PDDebug           = ( 1 << 16 ),
    FL_PDSharedMap       = ( 1 << 17 ),
    FL_PDStandardMap     = ( 1 << 18 ),
    FL_PDBorderWidth     = ( 1 << 19 ),
    FL_PDSafe            = ( 1 << 20 ),
    FL_PDMenuFontSize    = ( 1 << 21 ),
    FL_PDBrowserFontSize = ( 1 << 22 ),
    FL_PDChoiceFontSize  = ( 1 << 23 ),
    FL_PDLabelFontSize   = ( 1 << 24 )
}blablabla;
/* Popup policies */

typedef enum {
    FL_POPUP_NORMAL_SELECT,
    FL_POPUP_DRAG_SELECT
}blablabla;
/* Popup states */

typedef enum {
    FL_POPUP_NONE     = 0,
    FL_POPUP_DISABLED = 1,               /* entry is disabled */
    FL_POPUP_HIDDEN   = 2,               /* entry is temporarily hidden */
    FL_POPUP_CHECKED  = 4                /* tooogle/radio item is in on state */
}blablabla;
/* Popup entry types */

typedef enum {
    FL_POPUP_NORMAL,                     /* normal popup entry */
    FL_POPUP_TOGGLE,                     /* toggle ("binary") popup entry */
    FL_POPUP_RADIO,                      /* radio popup entry */
    FL_POPUP_SUB,                        /* sub-popup popup entry */
    FL_POPUP_LINE                        /* line popup entry */
}blablabla;
/* Popup color types */

typedef enum {
    FL_POPUP_BACKGROUND_COLOR,
    FL_POPUP_HIGHLIGHT_COLOR,
    FL_POPUP_TITLE_COLOR,
    FL_POPUP_TEXT_COLOR,
    FL_POPUP_HIGHLIGHT_TEXT_COLOR,
    FL_POPUP_DISABLED_TEXT_COLOR,
    FL_POPUP_RADIO_COLOR
}blablabla;
typedef enum {
    FL_ANALOG_CLOCK,
    FL_DIGITAL_CLOCK
}blablabla;
typedef enum {
    FL_INVISIBLE_CURSOR = -2,
    FL_DEFAULT_CURSOR   = -1,
    FL_BUSY_CURSOR      = XC_watch,
    FL_CROSSHAIR_CURSOR = XC_tcross,
    FL_KILL_CURSOR      = XC_pirate,
    FL_NWARROW_CURSOR   = XC_top_left_arrow,
    FL_NEARROW_CURSOR   = XC_arrow
}blablabla;
typedef enum {
    FL_DIAL_CW,
    FL_DIAL_CCW
}blablabla;
/*  File types */

typedef enum {
    FT_FILE,
    FT_DIR,
    FT_LINK,
    FT_SOCK,
    FT_FIFO,
    FT_BLK,
    FT_CHR,
    FT_OTHER
}blablabla;
typedef enum {
    FL_ALPHASORT = 1,       /* sort in alphabetic order           */
    FL_RALPHASORT,          /* sort in reverse alphabetic order   */
    FL_MTIMESORT,           /* sort according to modifcation time */
    FL_RMTIMESORT,          /* sort in reverse modificaiton time  */
    FL_SIZESORT,            /* sort in increasing size order      */
    FL_RSIZESORT,           /* sort in decreasing size order      */
    FL_CASEALPHASORT,       /* sort case insensitive              */
    FL_RCASEALPHASORT       /* sort case insensitive              */
}blablabla;
/* postscript stuff */

typedef enum {
   FLPS_AUTO,                  /* switch to landscale if does not fit */
   FLPS_LANDSCAPE,             /* landscape always                    */
   FLPS_PORTRAIT,              /* portrait always                     */
   FLPS_BESTFIT                /* even margins/best fit               */
}blablabla;
typedef enum {
  FLPS_BW = -1,
  FLPS_GRAYSCALE,
  FLPS_COLOR
}blablabla;
typedef enum {
    FL_NORMAL_FORMBROWSER
}blablabla;
typedef enum {
   FL_SMOOTH_SCROLL,
   FL_JUMP_SCROLL
}blablabla;
/* types of frames */

typedef enum {
    FL_NO_FRAME,
    FL_UP_FRAME,
    FL_DOWN_FRAME,
    FL_BORDER_FRAME,
    FL_SHADOW_FRAME,
    FL_ENGRAVED_FRAME,
    FL_ROUNDED_FRAME,
    FL_EMBOSSED_FRAME,
    FL_OVAL_FRAME
}blablabla;
/* for date input */

typedef enum {
    FL_INPUT_MMDD,
    FL_INPUT_DDMM
}blablabla;
typedef enum {
    FL_NORMAL_INPUT_MODE,
    FL_DOS_INPUT_MODE
}blablabla;
/* Nmenu object types */

typedef enum {
    FL_NORMAL_NMENU,
    FL_NORMAL_TOUCH_NMENU,
    FL_BUTTON_NMENU,
    FL_BUTTON_TOUCH_NMENU
}blablabla;
typedef enum {
    FL_VERT_SCROLLBAR,
    FL_HOR_SCROLLBAR,

    FL_VERT_THIN_SCROLLBAR,
    FL_HOR_THIN_SCROLLBAR,

    FL_VERT_NICE_SCROLLBAR,
    FL_HOR_NICE_SCROLLBAR,

    FL_VERT_PLAIN_SCROLLBAR,
    FL_HOR_PLAIN_SCROLLBAR,

    FL_HOR_BASIC_SCROLLBAR  = FL_HOR_PLAIN_SCROLLBAR,
    FL_VERT_BASIC_SCROLLBAR = FL_VERT_PLAIN_SCROLLBAR
}blablabla;
typedef enum {
	FL_NORMAL_SCROLLBAR,
	FL_THIN_SCROLLBAR,
	FL_NICE_SCROLLBAR,
	FL_PLAIN_SCROLLBAR
}blablabla;
/* Select object types */

typedef enum {
    FL_NORMAL_SELECT,
    FL_MENU_SELECT,
    FL_DROPLIST_SELECT
}blablabla;
typedef enum {
    FL_TOP_TABFOLDER,       /* tab on top */
    FL_BOTTOM_TABFOLDER,
    FL_LEFT_TABFOLDER,
    FL_RIGHT_TABFOLDER,
    FL_NORMAL_TABFOLDER = FL_TOP_TABFOLDER
}blablabla;
typedef enum {
    FL_NO,
    FL_FIT,
    FL_ENLARGE_ONLY
}blablabla;
typedef enum {
    FL_NORMAL_TEXT
}blablabla;
typedef enum {
    FL_VERT_THUMBWHEEL,
    FL_HOR_THUMBWHEEL
}blablabla;
typedef enum {
    FL_LINEAR,
    FL_LOG
}blablabla;
typedef enum {
    FL_GRID_NONE  = 0,
    FL_GRID_MAJOR = 1,
    FL_GRID_MINOR = 2
}blablabla;