xforms/package/xforms_forms.pas


  TFL_FORMCALLBACKPTR = procedure(obj: PFL_OBJECT; para2: pointer); cdecl;
  TFL_CALLBACKPTR = procedure(obj: PFL_OBJECT; user_data: clong); cdecl;
  TFL_RAW_CALLBACK = function(frm: PFL_FORM; para2: pointer): cint; cdecl;
  TFL_FORM_ATCLOSE = function(frm: PFL_FORM; para2: pointer): cint; cdecl;
  TFL_FORM_ATDEACTIVATE = procedure(frm: PFL_FORM; para2: pointer); cdecl;
  TFL_FORM_ATACTIVATE = procedure(frm: PFL_FORM; para2: pointer); cdecl;
  TFL_HANDLEPTR = function(obj: PFL_OBJECT; para2: cint; para3: TFL_Coord; para4: TFL_Coord; para5: cint; para6: pointer): cint; cdecl;
  TFL_ERROR_FUNC = procedure(para1: PChar; para2: PChar; args: array of const); cdecl;

  TFL_FORM = record
    fdui: pointer;
    u_vdata: pointer;
    u_cdata: PChar;
    u_ldata: cint;
    _label: PChar;
    window: TWindow;
    x: TFL_Coord;
    y: TFL_Coord;
    w: TFL_Coord;
    h: TFL_Coord;
    handle_dec_x: cint;
    handle_dec_y: cint;
    hotx: TFL_Coord;
    hoty: TFL_Coord;
    w_hr: cdouble;
    h_hr: cdouble;
    First: PFL_OBJECT;
    last: PFL_OBJECT;
    focusobj: PFL_OBJECT;
    form_callback: TFL_FORMCALLBACKPTR;
    activate_callback: TFL_FORM_ATACTIVATE;
    deactivate_callback: TFL_FORM_ATDEACTIVATE;
    form_cb_data: pointer;
    activate_data: pointer;
    deactivate_data: pointer;
    key_callback: TFL_RAW_CALLBACK;
    push_callback: TFL_RAW_CALLBACK;
    crossing_callback: TFL_RAW_CALLBACK;
    motion_callback: TFL_RAW_CALLBACK;
    all_callback: TFL_RAW_CALLBACK;
    compress_mask: cuint;
    evmask: cuint;
    close_callback: TFL_FORM_ATCLOSE;
    close_data: pointer;
    flpixmap: PFL_pixmap;
    icon_pixmap: TPixmap;
    icon_mask: TPixmap;
    deactivated: cint;
    use_pixmap: cint;
    frozen: cint;
    Visible: cint;
    wm_border: cint;
    prop: cuint;
    num_auto_objects: cint;
    needs_full_redraw: cint;
    sort_of_modal: cint;
    parent: PFL_FORM;
    child: PFL_FORM;
    parent_obj: PFL_OBJECT;
    attached: cint;
    pre_attach: procedure(para1: PFL_FORM); cdecl;
    attach_data: pointer;
    in_redraw: cint;
  end;

var
  FL_EVENT: PFL_OBJECT; cvar;external;

const
  FL_BEING_HIDDEN = -(1);
  FL_HIDDEN = 0;
  FL_INVISIBLE = FL_HIDDEN;
  FL_VISIBLE = 1;

type


{ All FD_xxx structure emitted by fdesign contains at least the
 * following  }

  PFD_Any = ^TFD_Any;

  TFD_Any = record
    form: PFL_FORM;
    vdata: pointer;
    cdata: PChar;
    ldata: cint;
  end;
  { Async IO stuff  }

const
  FL_READ = 1;
  FL_WRITE = 2;
  FL_EXCEPT = 4;

  { IO other than XEvent Q  }
type

  TFL_IO_CALLBACK = procedure(para1: cint; para2: pointer); cdecl;

procedure fl_add_io_callback(fd: cint; mask: cuint; callback: TFL_IO_CALLBACK; Data: pointer); cdecl; external;
procedure fl_remove_io_callback(fd: cint; mask: cuint; cb: TFL_IO_CALLBACK); cdecl; external;
{ signals  }
type

  TFL_SIGNAL_HANDLER = procedure(para1: cint; para2: pointer); cdecl;

procedure fl_add_signal_callback(s: cint; cb: TFL_SIGNAL_HANDLER; Data: pointer); cdecl; external;
procedure fl_remove_signal_callback(s: cint); cdecl; external;
procedure fl_signal_caught(s: cint); cdecl; external;
procedure fl_app_signal_direct(y: cint); cdecl; external;

const
  FL_INPUT_END_EVENT_CLASSIC = 0;
  FL_INPUT_END_EVENT_ALWAYS = 1;


function fl_input_end_return_handling(_type: cint): cint; cdecl; external;
{ Timeouts  }
type

  TFL_TIMEOUT_CALLBACK = procedure(para1: cint; para2: pointer); cdecl;

function fl_add_timeout(msec: cint; callback: TFL_TIMEOUT_CALLBACK; Data: pointer): cint; cdecl; external;
procedure fl_remove_timeout(id: cint); cdecl; external;
{ Basic public routine prototypes  }
function fl_library_version(ver: Pcint; rev: Pcint): cint; cdecl; external;
(* Const before type ignored *)
function fl_library_full_version(version: Pcint; revision: Pcint; fix_level: Pcint; extra: PPchar): cint; cdecl; external;
{* Generic routines that deal with FORMS * }
function fl_bgn_form(_type: cint; w: TFL_Coord; h: TFL_Coord): PFL_FORM; cdecl; external;
procedure fl_end_form; cdecl; external;
function fl_do_forms: PFL_OBJECT; cdecl; external;
function fl_check_forms: PFL_OBJECT; cdecl; external;
function fl_do_only_forms: PFL_OBJECT; cdecl; external;
function fl_check_only_forms: PFL_OBJECT; cdecl; external;
procedure fl_freeze_form(form: PFL_FORM); cdecl; external;
procedure fl_set_focus_object(form: PFL_FORM; obj: PFL_OBJECT); cdecl; external;
function fl_get_focus_object(form: PFL_FORM): PFL_OBJECT; cdecl; external;
procedure fl_reset_focus_object(ob: PFL_OBJECT); cdecl; external;
//const
//  fl_set_object_focus = fl_set_focus_object;
procedure fl_set_object_focus(form: PFL_FORM; obj: PFL_OBJECT); cdecl; external Name 'fl_set_focus_object';

function fl_set_form_atclose(form: PFL_FORM; fmclose: TFL_FORM_ATCLOSE; Data: pointer): TFL_FORM_ATCLOSE; cdecl; external;
function fl_set_atclose(fmclose: TFL_FORM_ATCLOSE; Data: pointer): TFL_FORM_ATCLOSE; cdecl; external;
function fl_set_form_atactivate(form: PFL_FORM; cb: TFL_FORM_ATACTIVATE; Data: pointer): TFL_FORM_ATACTIVATE; cdecl; external;
function fl_set_form_atdeactivate(form: PFL_FORM; cb: TFL_FORM_ATDEACTIVATE; Data: pointer): TFL_FORM_ATDEACTIVATE; cdecl; external;
procedure fl_unfreeze_form(form: PFL_FORM); cdecl; external;
function fl_form_is_activated(form: PFL_FORM): cint; cdecl; external;
procedure fl_deactivate_form(form: PFL_FORM); cdecl; external;
procedure fl_activate_form(form: PFL_FORM); cdecl; external;
procedure fl_deactivate_all_forms; cdecl; external;
procedure fl_activate_all_forms; cdecl; external;
procedure fl_freeze_all_forms; cdecl; external;
procedure fl_unfreeze_all_forms; cdecl; external;
procedure fl_scale_form(form: PFL_FORM; xsc: cdouble; ysc: cdouble); cdecl; external;
procedure fl_set_form_position(form: PFL_FORM; x: TFL_Coord; y: TFL_Coord); cdecl; external;
(* Const before type ignored *)
procedure fl_set_form_title(form: PFL_FORM; Name: PChar); cdecl; external;
(* Const before type ignored *)
procedure fl_set_form_title_f(form: PFL_FORM; fmt: PChar; args: array of const); cdecl; external;
procedure fl_set_form_title_f(form: PFL_FORM; fmt: PChar); cdecl; external;
procedure fl_set_app_mainform(form: PFL_FORM); cdecl; external;
function fl_get_app_mainform: PFL_FORM; cdecl; external;
procedure fl_set_app_nomainform(flag: cint); cdecl; external;
procedure fl_set_form_callback(form: PFL_FORM; callback: TFL_FORMCALLBACKPTR; d: pointer); cdecl; external;
//const
//  fl_set_form_call_back = fl_set_form_callback;
procedure fl_set_form_call_back(form: PFL_FORM; callback: TFL_FORMCALLBACKPTR; d: pointer); cdecl; external Name 'fl_set_form_callback';


procedure fl_set_form_size(form: PFL_FORM; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_set_form_background_color(form: PFL_FORM; color: TFL_COLOR); cdecl; external;
function fl_get_form_background_color(form: PFL_FORM): TFL_COLOR; cdecl; external;
procedure fl_set_form_hotspot(form: PFL_FORM; x: TFL_Coord; y: TFL_Coord); cdecl; external;
procedure fl_set_form_hotobject(form: PFL_FORM; ob: PFL_OBJECT); cdecl; external;
procedure fl_set_form_minsize(form: PFL_FORM; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_set_form_maxsize(form: PFL_FORM; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_set_form_event_cmask(form: PFL_FORM; cmask: cuint); cdecl; external;
function fl_get_form_event_cmask(form: PFL_FORM): cuint; cdecl; external;
procedure fl_set_form_geometry(form: PFL_FORM; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord); cdecl; external;
//const
//  fl_set_initial_placement = fl_set_form_geometry;  
procedure fl_set_initial_placement(form: PFL_FORM; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord); cdecl; external Name 'fl_set_form_geometry';
(* Const before type ignored *)

function fl_show_form(form: PFL_FORM; place: cint; border: cint; Name: PChar): TWindow; cdecl; external;
(* Const before type ignored *)
function fl_show_form_f(form: PFL_FORM; place: cint; border: cint; fmt: PChar; args: array of const): TWindow; cdecl; external;
function fl_show_form_f(form: PFL_FORM; place: cint; border: cint; fmt: PChar): TWindow; cdecl; external;
procedure fl_hide_form(form: PFL_FORM); cdecl; external;
procedure fl_free_form(form: PFL_FORM); cdecl; external;
procedure fl_redraw_form(form: PFL_FORM); cdecl; external;
procedure fl_set_form_dblbuffer(form: PFL_FORM; y: cint); cdecl; external;
(* Const before type ignored *)
function fl_prepare_form_window(form: PFL_FORM; place: cint; border: cint; Name: PChar): TWindow; cdecl; external;
(* Const before type ignored *)
function fl_prepare_form_window_f(form: PFL_FORM; place: cint; border: cint; fmt: PChar; args: array of const): TWindow; cdecl; external;
function fl_prepare_form_window_f(form: PFL_FORM; place: cint; border: cint; fmt: PChar): TWindow; cdecl; external;
function fl_show_form_window(form: PFL_FORM): TWindow; cdecl; external;
function fl_adjust_form_size(form: PFL_FORM): cdouble; cdecl; external;
function fl_form_is_visible(form: PFL_FORM): cint; cdecl; external;
function fl_form_is_iconified(form: PFL_FORM): cint; cdecl; external;
function fl_register_raw_callback(form: PFL_FORM; mask: cuint; rcb: TFL_RAW_CALLBACK): TFL_RAW_CALLBACK; cdecl; external;
//const
//  fl_register_call_back = fl_register_raw_callback;  
function fl_register_call_back(form: PFL_FORM; mask: cuint; rcb: TFL_RAW_CALLBACK): TFL_RAW_CALLBACK; cdecl; external Name 'fl_register_raw_callback';
